--- a/Resomar/WebContent/View/speciality/speciality.html
+++ b/Resomar/WebContent/View/speciality/speciality.html
@@ -15,11 +15,13 @@
 
                 <div class="col-md-4">
                     <label ng-if="formSpeciality.speciality.$valid">Especialidade</label>
-                    <input class="form-control input"  name="speciality" placeholder="Especialidade"
-                           ng-class="{'invalid':formSpeciality.speciality.$invalid && formSpeciality.speciality.$touched}" ng-model="specialityCtrl.speciality" required>
+                    <input class="form-control input" name="speciality" placeholder="Especialidade"
+                           ng-class="{'invalid':formSpeciality.speciality.$invalid && formSpeciality.speciality.$touched}"
+                           ng-model="specialityCtrl.speciality" required>
                 </div>
                 <div class="buttons col-md-12">
-                    <input type="button" class="btn btn-save" ng-click="specialityCtrl.validateSpeciality();" value="Cadastrar">
+                    <input type="button" class="btn btn-save" ng-click="specialityCtrl.validateSpeciality();"
+                           value="Cadastrar">
                 </div>
             </div>
         </form>
@@ -38,7 +40,8 @@
         <th scope="row">1</th>
         <td>Dentista</td>
         <td class="icons">
-            <a class="btn btn-sm button-edit " ng-click="specialityCtrl.openModal('lg');" ><i class="fas fa-pencil-alt"></i></a>
+            <a class="btn btn-sm button-edit " ng-click="specialityCtrl.openModal('lg');"><i
+                    class="fas fa-pencil-alt"></i></a>
             <a class="btn btn-sm button-trash"><i class="fas fa-trash-alt"></i></a>
         </td>
     </tr>
