--- a/Resomar/WebContent/View/donate/donate.html
+++ b/Resomar/WebContent/View/donate/donate.html
@@ -4,10 +4,10 @@
         <h4 class="card-header">Cadastro de Doações
             <a title="Minimizar"><i ng-class="{'fas fa-window-minimize': showForm, 'fas fa-plus': !showForm}" ng-init="showForm = true" ng-click="showForm = !showForm" class="fas fa-window-minimize"></i></a>
         </h4>
-        <form class="donate-form" ng-show="showForm">
+        <form name="donate-form" class="donate-form" ng-show="showForm">
             <div class="row">
                 <label class="col-sm-12 col-lg-12 col-xl-12 col-md-12">
-                    <select type="text" id="tipoDoacao" name="tipoDoacao" class="form-control">
+                    <select ng-model="donate.type" type="text" id="donateType" name="tipoDoacao" class="form-control" >
                         <option value="Selecione">Selecione o tipo de doação</option>
                         <option value="Consultas">Consultas</option>
                         <option value="Exames">Exames</option>
@@ -15,41 +15,41 @@
                     </select>
                 </label>
 
-                <label ng-show="" id="quantidadeConsultas" class="col-sm-12 col-lg-12 col-xl-12 col-md-12">
-                    <input id="quantidadeConsultas" name="quantidadeConsultas" class="form-control"
-                           placeholder="Qtd. Consultas">
+                <label ng-class="{'hide': donate.type !== 'Consultas'}" id="quantidadeConsultas" class="col-sm-12 col-lg-12 col-xl-12 col-md-12">
+                    <input  name="quantidadeConsultas" class="form-control"
+                    placeholder="Qtd. Consultas">
                 </label>
-                <label id="clinicaConsultas" class="col-sm-12 col-lg-12 col-xl-12 col-md-12">
-                    <select type="hidden" id="clinicaConsultas" name="clinicaConsultas" class="form-control">
+                <label ng-class="{'hide': donate.type !== 'Consultas'}" id="clinicaConsultas" class="col-sm-12 col-lg-12 col-xl-12 col-md-12">
+                    <select  name="clinicaConsultas" class="form-control">
                         <option>Selecione a clínica responsável</option>
                         <option value="Clínica">Clínica Fantasia</option>
                     </select>
                 </label>
 
-                <label id="quantidadeExames" class="col-sm-12 col-lg-12 col-xl-12 col-md-12">
-                    <input id="quantidadeExames" name="quantidadeExames" class="form-control" placeholder="Qtd. Exames">
+                <label ng-class="{'hide': donate.type !== 'Exames'}"  id="quantidadeExames" class="col-sm-12 col-lg-12 col-xl-12 col-md-12">
+                    <input name="quantidadeExames" class="form-control" placeholder="Qtd. Exames">
                 </label>
-                <label id="complexidadeExame" class="col-sm-12 col-lg-12 col-xl-12 col-md-12">
-                    <select id="complexidadeExame" name="complexidadeExame" class="form-control">
+                <label ng-class="{'hide': donate.type !== 'Exames'}"  id="complexidadeExame" class="col-sm-12 col-lg-12 col-xl-12 col-md-12">
+                    <select name="complexidadeExame" class="form-control">
                         <option>Informe a complexidade</option>
                         <option>Baixa</option>
                         <option>Média</option>
                         <option>Alta</option>
                     </select>
                 </label>
-                <label id="clinicaExames" class="col-sm-12 col-lg-12 col-xl-12 col-md-12">
-                    <select id="clinicaExames" name="clinicaExames" class="form-control">
+                <label ng-class="{'hide': donate.type !== 'Exames'}" id="clinicaExames" class="col-sm-12 col-lg-12 col-xl-12 col-md-12">
+                    <select  name="clinicaExames" class="form-control">
                         <option>Selecione a clínica responsável</option>
                         <option>Clínica Fantasia</option>
                     </select>
                 </label>
 
-                <label id="quantidadeAdocoes" class="col-sm-12 col-lg-12 col-xl-12 col-md-12">
-                    <input id="quantidadeAdocoes" name="quantidadeAdocoes" class="form-control"
+                <label ng-class="{'hide': donate.type !== 'Doacoes'}" id="quantidadeAdocoes" class="col-sm-12 col-lg-12 col-xl-12 col-md-12">
+                    <input  name="quantidadeAdocoes" class="form-control"
                            placeholder="Qtd. Adoções">
                 </label>
                 <label class="col-sm-12 col-lg-12 col-xl-12 col-md-12">
-                    <select id="clinicaAdocao" name="clinicaAdocao" class="form-control">
+                    <select ng-class="{'hide': donate.type !== 'Doacoes'}" name="clinicaAdocao" class="form-control">
                         <option>Selecione a clínica responsável</option>
                         <option>Clínica Fantasia</option>
                     </select>
