--- a/Resomar/WebContent/View/login/login.css
+++ b/Resomar/WebContent/View/login/login.css
@@ -28,7 +28,7 @@ div.col-md-8.banner-sec {
 }
 
 .form-check {
-	margin-top: 10px;
+	margin-top: 20px;
 }
 
 .carousel-caption {
@@ -46,7 +46,6 @@ left: 5%;
 position: absolute;
 width: 80%;
 bottom: 20px;
-font-size: 13px;
 text-align: center;
 }
 
@@ -80,7 +79,6 @@ margin-right: auto
 .btn-login {
 background: #1E3B2F;
 color: #fff;
-font-weight: 600;
 }
 
 .banner-text {
@@ -91,7 +89,6 @@ padding-left: 345px;
 
 .banner-text h2 {
 	color: white;
-	font-weight: 600;
 }
 
 .banner-text h2:after {
@@ -175,4 +172,24 @@ body {
 }
 .invalid {
 	border-color: red;
+}
+
+.form-group {
+	position: relative !important;
+	margin-bottom: 1.5rem !important;
+}
+
+.form-control-placeholder {
+	position: absolute !important;
+	top: 0 !important;
+	padding: 7px 0 0 13px !important;
+	transition: all 200ms !important;
+	opacity: 0.5 !important;
+}
+
+.form-control:focus + .form-control-placeholder,
+.form-control:valid + .form-control-placeholder {
+	font-size: 100% !important;
+	transform: translate3d(0, -100%, 0) !important;
+	opacity: 1 !important;
 }
